# ChangeLog for app-text/uudeview
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/uudeview/ChangeLog,v 1.16 2004/04/19 15:12:09 dragonheart Exp $

  20 Apr 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  uudeview-0.5.20.ebuild:
  QA - removed runtime dependance on autoconf

  27 Mar 2004; David Holm <dholm@gentoo.org> uudeview-0.5.20.ebuild:
  Added to ~ppc.

  26 Mar 2004; Jason Wever <weeve@gentoo.org> uudeview-0.5.20.ebuild:
  Stable on sparc wrt bug #44859.

*uudeview-0.5.20 (26 Mar 2004)

  26 Mar 2004; Seemant Kulleen <seemant@gentoo.org> uudeview-0.5.13.ebuild,
  uudeview-0.5.18.ebuild, uudeview-0.5.20.ebuild:
  update for security fix as per bug #44859, by Jeff Patterson <helixj@yahoo.ca>
  and contributed to heavily by: CondorDES <condor-gentoo@condordes.net>

  22 Feb 2004; Daniel Ahlberg <aliz@gentoo.org> uudeview-0.5.18.ebuild,
  files/uudeview-0.5.18-optimize_size.patch:
  Fix compilation with -Os and get handling of optimization to configure right. Closing #42466.

  24 Aug 2003; Michael Sterrett <msterret@gentoo.org> uudeview-0.5.18.ebuild:
  use emake; add error message; tidy

*uudeview-0.5.18 (08 Nov 2002)

  01 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Cleanup ... use econf, use_enable, and debug USE flag

  13 Jan 2003; Nick Hadaway <raker@gentoo.org> uudeview-0.5.18.ebuild :
  Added DEBUGBUILD support so those with -g options in their make.conf
  don't get them stripped out by configure.

  12 Jan 2003; Nick Hadaway <raker@gentoo.org> uudeview-0.5.18.ebuild :
  Changed from emake to make.

  08 Nov 2002; Hanno Boeck <hanno@gentoo.org> uudeview-0.5.18.ebuild :
  New version.

*uudeview-0.5.13 (04 Jun 2002)

  01 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Cleanup ... use econf, use_enable, and debug USE flag

  2 Aug 2002; phoen][x <phoenix@gentoo.org> uudeview-0.5.13.ebuild :
  Added KEYWORDS, SLOT.
