@@ -1,6 +1,9 @@
 # ChangeLog for app-text/wdiff
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.3 2004/03/12 08:51:22 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.4 2004/06/02 16:07:31 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> wdiff-0.5.ebuild:
+  Fix use invocation
 
   12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> wdiff-0.5.ebuild:
   Don't assign default to S; header fix
