@@ -1,6 +1,9 @@
 # ChangeLog for app-text/uudeview
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/uudeview/ChangeLog,v 1.16 2004/04/19 15:12:09 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/uudeview/ChangeLog,v 1.17 2004/06/02 16:05:52 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> uudeview-0.5.20.ebuild:
+  Fix use invocation
 
   20 Apr 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
   uudeview-0.5.20.ebuild:
